--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Twitter bot to fetch posts from reddit",
   "main": "index.js",
   "scripts": {
+      "start": "node ./bin/bot.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
